force-app/main/default/objects/Configuration__c/fields/domain_name__c.field-meta.xml
<CustomField>
    <fullName>domain_name__c</fullName>
    <label>Domain name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>