force-app/main/default/objects/Configuration__c/fields/Exclusion_Email__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Email__c</fullName>
    <label>Exclusion Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>