force-app/main/default/objects/Configuration__c/fields/ExclusionSubjectKeyword__c.field-meta.xml
<CustomField>
    <fullName>ExclusionSubjectKeyword__c</fullName>
    <label>Exclusion Subject Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>