force-app/main/default/objects/Configuration__c/recordTypes/Exclusion_Emails.recordType-meta.xml
<RecordType>
    <fullName>Exclusion_Emails</fullName>
    <active>true</active>
    <label>Exclusion Emails</label>
</RecordType>