force-app/main/default/objects/Configuration__c/recordTypes/OOO_Blockers.recordType-meta.xml
<RecordType>
    <fullName>OOO_Blockers</fullName>
    <active>true</active>
    <label>Exclusion Subject</label>
</RecordType>