force-app/main/default/objects/Configuration__c/recordTypes/Priority_domain.recordType-meta.xml
<RecordType>
    <fullName>Priority_domain</fullName>
    <active>true</active>
    <label>Priority domain</label>
</RecordType>